--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "gulp-util": "^3.0.1",
+    "node-hipchat": "^0.4.5",
     "through2": "^0.6.3"
   },
   "devDependencies": {
